RESOLVED FIXED279482
REGRESSION (283132@main): [visionOS] Unable to start drags over web content
https://bugs.webkit.org/show_bug.cgi?id=279482
Summary REGRESSION (283132@main): [visionOS] Unable to start drags over web content
Wenson Hsieh
Reported 2024-09-10 18:11:23 PDT
Attachments
Wenson Hsieh
Comment 1 2024-09-10 18:19:58 PDT
EWS
Comment 2 2024-09-10 23:18:43 PDT
Committed 283463@main (b6a6f030b228): <https://commits.webkit.org/283463@main> Reviewed commits have been landed. Closing PR #33437 and removing active labels.
EWS
Comment 3 2024-09-11 15:15:25 PDT
Committed 283286.18@safari-7620-branch (af94f5215cd1): <https://commits.webkit.org/283286.18@safari-7620-branch> Reviewed commits have been landed. Closing PR #1732 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.